fix(Icon): Fix the vertical-align compatibility issue of the icon component

--- a/components/Button/style/token.less
+++ b/components/Button/style/token.less
@@ -24,10 +24,10 @@
 @btn-size-default-icon-spacing: @spacing-4;
 @btn-size-large-icon-spacing: @spacing-4;
 
-@btn-size-mini-icon-vertical-align: -2px;
-@btn-size-small-icon-vertical-align: -2px;
-@btn-size-default-icon-vertical-align: -2px;
-@btn-size-large-icon-vertical-align: -2px;
+@btn-size-mini-icon-vertical-align: -0.125em;
+@btn-size-small-icon-vertical-align: -0.125em;
+@btn-size-default-icon-vertical-align: -0.125em;
+@btn-size-large-icon-vertical-align: -0.125em;
 
 @btn-size-mini-padding-horizontal: 11px;
 @btn-size-small-padding-horizontal: 15px;
