--- a/components/style/icon.less
+++ b/components/style/icon.less
@@ -4,7 +4,7 @@
   font-style: normal;
   width: 1em;
   height: 1em;
-  vertical-align: -2px;
+  vertical-align: -0.125em;
   stroke: currentColor;
 }
 
